--- a/style.css
+++ b/style.css
@@ -6,17 +6,17 @@
 
 @font-face {
     font-family: ownFont;
-    src: url(/assets/gui/font/CyberpunkCraftpixPixel.otf);
+    src: url(/AI-Companion-Game/assets/gui/font/CyberpunkCraftpixPixel.otf);
 }
 
 body {
     font-family: ownFont;
     color: #ffffff;
     background-color: #000000;
-    cursor: url('/assets/gui/Cursors/2.png'), auto;
+    cursor: url('/AI-Companion-Game/assets/gui/Cursors/2.png'), auto;
 }
 
 canvas {
     display: block;
-    background-image: url(/assets/backgrounds/2304x1296.png);
+    background-image: url(/AI-Companion-Game/assets/backgrounds/2304x1296.png);
 }
